Tools need to read unnamed module for zip4j